Fixed overflow container

--- a/assets/themes/twitter-sandbox/css/style.less
+++ b/assets/themes/twitter-sandbox/css/style.less
@@ -64,6 +64,14 @@ html, body {
 
 }
 
+.pre {
+    width:675px;
+}
+
+.code {
+    width:675px;
+}
+
 //The code tag -- a temporary fix until I can generalize it more.
 .prettyprint.linenums {
     width:675px;
